feat: Agregando el uso de tiktoken al notebook 02 (related to #3)

--- a/notebooks/02_data_preprocessing.ipynb
+++ b/notebooks/02_data_preprocessing.ipynb
@@ -49,7 +49,11 @@
    "source": [
     "## BPE\n",
     "\n",
-    " BPE es un algoritmo que usa la metodologia button-up, empieza con caracteres (bytes) de la secuencia para luego añadir pares frecuentes iterativamente hasta completar la tokenización. Para estas celdas de codigo vamos a utilizar el cuaderno del capitulo 2 bpe-from-scratch.ipynb del repostitorio público de LLMs-from-scratch de Sebastian Raschka.\n",
+    " BPE es un algoritmo que usa la metodologia button-up, empieza con caracteres (bytes) de la secuencia para luego \n",
+    " añadir pares frecuentes iterativamente hasta completar la tokenización, esto ayuda a disminuir\n",
+    " la cantidad de tokens desconocidos (OOV) y reduce el vocabulario a comparacion que la tokenizacion basada en palabras. Para estas celdas de codigo vamos a \n",
+    " utilizar el cuaderno del capitulo 2 bpe-from-scratch.ipynb del repostitorio público de LLMs-from-scratch de \n",
+    " Sebastian Raschka.\n",
     "\n",
     " ### Pasos del algoritmo BPE\n",
     "\n",
@@ -932,11 +936,163 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b4b078bc",
+   "metadata": {},
+   "source": [
+    "Raschka no recomienda usar su tokenizador BPE creado desde cero sino mas bien recomienda bibliotecas que se encuentren optimizadas para esa tarea, aqui vamos a presentar dos bibliotecas que es tiktoken de OpenAI que es recomendado por el mismo Raschka y el tokenizador de Hugging Face"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b9651468",
+   "metadata": {},
+   "source": [
+    "## Tokenización con tiktoken (OpenAI)\n",
+    "\n",
+    "Esta biblioteca es recomendado por su rendimiento computacional y es el tokenizador utilizado por los modelos de OpenAI (como GPT-2, GPT-4). Es útil probarlo como un tokenizador BPE pre-entrenado de alto rendimiento."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "99b22893",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "import tiktoken\n",
+    "\n",
+    "enc = tiktoken.get_encoding(\"o200k_base\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "id": "8c834340",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[83, 8251, 2488, 878, 80401, 0]"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "enc.encode(\"tiktoken es genial!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "id": "75a32e04",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def num_tokens_from_string(text):\n",
+    "    \"\"\"Retorna el numero de tokens en un string.\"\"\"\n",
+    "    num_tokens = len(enc.encode(text))\n",
+    "    return num_tokens"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "id": "6b9a89b2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "num_tokens_from_string(\"Hello, I'm Luis\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "id": "37de7edd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'tiktoken es genial!'"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "enc.decode([83, 8251, 2488, 878, 80401, 0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "id": "bee343b0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[b't', b'ikt', b'oken', b' es', b' genial', b'!']"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "[enc.decode_single_token_bytes(token) for token in [83, 8251, 2488, 878, 80401, 0]]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f8dee9a3",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f9ca3d7c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "058d73b8",
+   "metadata": {},
+   "source": [
+    "# Referencias\n",
+    "\n",
+    "- Cuarderno de BPE de Raschka: https://github.com/rasbt/LLMs-from-scratch/blob/main/ch02/05_bpe-from-scratch/bpe-from-scratch.ipynb\n",
+    "- Repositorio de tiktoken: https://github.com/openai/tiktoken "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6a3fc511",
+   "metadata": {},
    "source": []
   }
  ],
