feat: Agregando tokenizador de Hugging Face al notebook 02 (related to #2)

--- a/notebooks/02_data_preprocessing.ipynb
+++ b/notebooks/02_data_preprocessing.ipynb
@@ -1705,7 +1705,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": null,
    "id": "7ab5fbf7",
    "metadata": {},
    "outputs": [
@@ -1755,14 +1755,152 @@
    "cell_type": "markdown",
    "id": "3c6e878a",
    "metadata": {},
-   "source": []
+   "source": [
+    "# Tokenizador de Hugging Face\n",
+    "\n",
+    "Gracias a este tokenizador podemos entrenarlo con nuestros datos"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "id": "e2d3a273",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from tokenizers import Tokenizer\n",
+    "from tokenizers.models import BPE\n",
+    "from tokenizers.trainers import BpeTrainer\n",
+    "from tokenizers.pre_tokenizers import Whitespace \n",
+    "import os"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "id": "850876a0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Creamos el directorio para guardar el tokenizer\n",
+    "TOKENIZER_DIR = \"cnn_dailymail_bpe_tokenizer\"\n",
+    "if not os.path.exists(TOKENIZER_DIR):\n",
+    "    os.makedirs(TOKENIZER_DIR)\n",
+    "TOKENIZER_PATH = os.path.join(TOKENIZER_DIR, \"tokenizer.json\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "id": "af5624ad",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Definir símbolos especiales e índices\n",
+    "UNK_IDX, PAD_IDX, BOS_IDX, EOS_IDX = 0, 1, 2, 3\n",
+    "# Asegurarse de que los tokens estén en orden de sus índices para insertarlos correctamente en el vocabulario\n",
+    "special_symbols = ['<unk>', '<pad>', '<bos>', '<eos>']\n",
+    "\n",
+    "trainer = BpeTrainer(special_tokens=special_symbols)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "71ad5f77",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Entrenando tokenizador BPE con vocab_size=40000...\n",
+      "Entrenamiento completado.\n",
+      "Tokenizador guardado en: cnn_dailymail_bpe_tokenizer\\tokenizer.json\n"
+     ]
+    }
+   ],
+   "source": [
+    "tokenizer_hf = Tokenizer(BPE(unk_token=special_symbols[UNK_IDX])) # usamos <unk> para tokens desconocidos\n",
+    "\n",
+    "tokenizer_hf.pre_tokenizer = Whitespace()\n",
+    "\n",
+    "def get_training_corpus():\n",
+    "    for i in range(len(dataset['train'])):\n",
+    "         yield dataset['train'][i]['article']\n",
+    "         yield dataset['train'][i]['highlights']\n",
+    "\n",
+    "tokenizer_hf.train_from_iterator(get_training_corpus(), trainer=trainer)\n",
+    "print(\"Entrenamiento completado.\")\n",
+    "\n",
+    "tokenizer_hf.save(TOKENIZER_PATH)\n",
+    "print(f\"Tokenizador guardado en: {TOKENIZER_PATH}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "id": "bda6e98b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "30000"
+      ]
+     },
+     "execution_count": 105,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tokenizer_hf.get_vocab_size()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
+   "id": "64490c0f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Tokenizador Hugging Face cargado.\n",
+      "\n",
+      "Tokens HF para artículo (primeros 50): [19188, 15, 1522, 11, 12351, 12, 806, 3787, 11064, 1424, 3717, 22171, 11709, 2651, 510, 68, 1381, 100, 697, 1064, 7275, 4499, 17, 20, 1064, 12, 8293, 519, 500, 6911, 1428, 505, 1624, 15, 647, 500, 6436, 503, 1539, 1397, 10, 87, 1844, 68, 6992, 505, 741, 17, 3717, 22171]...\n",
+      "Número total de tokens HF (artículo): 568\n",
+      "Tokens HF para resumen: [3787, 11064, 1424, 3717, 22171, 3352, 100, 697, 48, 8293, 519, 500, 6911, 1428, 1624, 17, 4831, 3274, 911, 500, 606, 709, 2516, 510, 584, 22324, 570, 3527, 1279, 17, 22171, 10, 86, 12266, 605, 833, 1299, 11064, 6006, 604, 658, 1873, 501, 3510, 2497, 17]\n",
+      "Número total de tokens HF (resumen): 46\n",
+      "\n",
+      "Decodificado HF: LONDON , England ( Reuters ) -- Harry Potter star Daniel Radcliffe gains access to a reported £ 20 million ($ 41 . 1 million ) fortune as he turns 18 on Monday , but he insists the money won ' t cast a spell on him . Daniel Radcliffe...\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Cargar el tokenizador desde el archivo\n",
+    "tokenizer_hf_loaded = Tokenizer.from_file(TOKENIZER_PATH)\n",
+    "print(\"\\nTokenizador Hugging Face cargado.\")\n",
+    "\n",
+    "# Probar encode/decode\n",
+    "output_hf = tokenizer_hf_loaded.encode(sample_article)\n",
+    "output_highlight_hf = tokenizer_hf_loaded.encode(sample_highlight)\n",
+    "\n",
+    "print(f\"\\nTokens HF para artículo (primeros 50): {output_hf.ids[:50]}...\")\n",
+    "print(f\"Número total de tokens HF (artículo): {len(output_hf.ids)}\")\n",
+    "print(f\"Tokens HF para resumen: {output_highlight_hf.ids}\")\n",
+    "print(f\"Número total de tokens HF (resumen): {len(output_highlight_hf.ids)}\")\n",
+    "\n",
+    "# Decodificar para verificar\n",
+    "print(f\"\\nDecodificado HF: {tokenizer_hf_loaded.decode(output_hf.ids[:50])}...\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d40fc44f",
+   "metadata": {},
    "source": []
   },
   {
@@ -1773,8 +1911,15 @@
     "# Referencias\n",
     "\n",
     "- Cuarderno de BPE de Raschka: https://github.com/rasbt/LLMs-from-scratch/blob/main/ch02/05_bpe-from-scratch/bpe-from-scratch.ipynb\n",
-    "- Repositorio de tiktoken: https://github.com/openai/tiktoken "
+    "- Repositorio de tiktoken: https://github.com/openai/tiktoken \n",
+    "- Documentación tokenizers de huggin face: https://huggingface.co/docs/tokenizers/quicktour"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c84762e8",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "markdown",
