feat: Agregando la eliminacion de valores atipicos al cuaderno 02 (related to #3)

--- a/notebooks/02_data_preprocessing.ipynb
+++ b/notebooks/02_data_preprocessing.ipynb
@@ -2405,6 +2405,83 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "fc97606a",
+   "metadata": {},
+   "source": [
+    "# Eliminamos los valores muy extremos\n",
+    "\n",
+    "Antes del truncamiento vamos a proceder a eliminar los valores muy atipicos de cada dataset por la razon que dimos en el notebook 01"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "5f30a98b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "MAX_REASONABLE_HIGHLIGHT_TOKENS = 200"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "bbc87cc4",
+   "metadata": {
+    "vscode": {
+     "languageId": "ruby"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train: Eliminados 347 outliers (0.12%)\n",
+      "Validation: Eliminados 15 outliers (0.11%)\n",
+      "Test: Eliminados 14 outliers (0.12%)\n",
+      "\n",
+      "Nuevas estadísticas para train_df_filtered:\n",
+      "       len_token_article  len_token_highlight\n",
+      "count      286766.000000        286766.000000\n",
+      "mean          861.502730            61.202691\n",
+      "std           420.514202            23.519008\n",
+      "min            26.000000             5.000000\n",
+      "25%           550.000000            45.000000\n",
+      "50%           785.000000            58.000000\n",
+      "75%          1092.000000            72.000000\n",
+      "max          5532.000000           200.000000\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Filtrar outliers en el conjunto de entrenamiento\n",
+    "original_train_len = len(train_df)\n",
+    "train_df_filtered = train_df[train_df['len_token_highlight'] <= MAX_REASONABLE_HIGHLIGHT_TOKENS]\n",
+    "\n",
+    "removed_train = original_train_len - len(train_df_filtered)\n",
+    "print(f\"Train: Eliminados {removed_train} outliers ({(removed_train/original_train_len)*100:.2f}%)\")\n",
+    "\n",
+    "# Filtrar outliers en el conjunto de validación\n",
+    "original_val_len = len(validation_data_df)\n",
+    "validation_df_filtered = validation_data_df[validation_data_df['len_token_highlight'] <= MAX_REASONABLE_HIGHLIGHT_TOKENS]\n",
+    "\n",
+    "removed_val = original_val_len - len(validation_df_filtered)\n",
+    "print(f\"Validation: Eliminados {removed_val} outliers ({(removed_val/original_val_len)*100:.2f}%)\")\n",
+    "\n",
+    "# Filtrar outliers en el conjunto de test\n",
+    "original_test_len = len(test_data_df)\n",
+    "test_df_filtered = test_data_df[test_data_df['len_token_highlight'] <= MAX_REASONABLE_HIGHLIGHT_TOKENS]\n",
+    "\n",
+    "removed_test = original_test_len - len(test_df_filtered)\n",
+    "print(f\"Test: Eliminados {removed_test} outliers ({(removed_test/original_test_len)*100:.2f}%)\")\n",
+    "\n",
+    "print(\"\\nNuevas estadísticas para train_df_filtered:\")\n",
+    "print(train_df_filtered[['len_token_article', 'len_token_highlight']].describe())"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "01d1721d",
