feat: Agregando el truncamiento de los datos tokenizados en el cuaderno 02 (related to #3)

--- a/notebooks/02_data_preprocessing.ipynb
+++ b/notebooks/02_data_preprocessing.ipynb
@@ -2416,7 +2416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 26,
    "id": "5f30a98b",
    "metadata": {},
    "outputs": [],
@@ -2426,7 +2426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 27,
    "id": "bbc87cc4",
    "metadata": {
     "vscode": {
@@ -2482,26 +2482,65 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "255ddfab",
+   "metadata": {},
+   "source": [
+    "# Truncamiento\n",
+    "\n",
+    "Como vimos en el paso anterior, eliminamos todos los registros que tenían un resumen muy largo (probablemente no eran resúmenes reales), el objetivo del truncamiento es acortar aún más tanto los artículos como las salidas.¿Por qué hacer esto? En modelos seq2seq, la información más importante generalmente se encuentra al inicio de la secuencia, por lo que truncar la parte final del texto no representa una gran pérdida de contenido relevante.Otra razón es conservar la mayor cantidad de datos posible, eliminar directamente los registros, como hicimos en el paso anterior, puede resultar en una pérdida significativa de información útil para el entrenamiento del modelo."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "id": "01d1721d",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Longitud máxima artículo (tokens): 1200\n",
+      "Longitud máxima resumen (tokens): 130\n"
+     ]
+    }
+   ],
+   "source": [
+    "MAX_TOKENS_ARTICLE = 1200\n",
+    "MAX_TOKENS_HIGHLIGHT = 130\n",
+    "print(f\"\\nLongitud máxima artículo (tokens): {MAX_TOKENS_ARTICLE}\")\n",
+    "print(f\"Longitud máxima resumen (tokens): {MAX_TOKENS_HIGHLIGHT}\")"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "id": "123f7e46",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "d40fc44f",
-   "metadata": {},
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Longitud artículo HF truncado: 959\n",
+      "Longitud resumen HF truncado: 30\n"
+     ]
+    }
+   ],
+   "source": [
+    "tokenizer_hf_loaded.enable_truncation(max_length=MAX_TOKENS_ARTICLE)\n",
+    "\n",
+    "output_hf_truncated = tokenizer_hf_loaded.encode(sample_article)\n",
+    "print(f\"\\nLongitud artículo HF truncado: {len(output_hf_truncated.ids)}\")\n",
+    "\n",
+    "tokenizer_hf_loaded.enable_truncation(max_length=MAX_TOKENS_HIGHLIGHT)\n",
+    "\n",
+    "output_highlight_hf_truncated = tokenizer_hf_loaded.encode(sample_highlight)\n",
+    "print(f\"Longitud resumen HF truncado: {len(output_highlight_hf_truncated.ids)}\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -2514,18 +2553,6 @@
     "- Repositorio de tiktoken: https://github.com/openai/tiktoken \n",
     "- Documentación tokenizers de huggin face: https://huggingface.co/docs/tokenizers/quicktour"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "c84762e8",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "6a3fc511",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
