feat: Empezando la configuración del tokenizador nt 03 (related #7)

--- a/notebooks/03_dataloader_setup.ipynb
+++ b/notebooks/03_dataloader_setup.ipynb
@@ -45,14 +45,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "2741e4a4",
    "metadata": {},
    "outputs": [],
    "source": [
     "from torch.utils.data import Dataset, DataLoader\n",
     "from torchtext.data.utils import get_tokenizer\n",
-    "from torchtext.vocab import build_vocab_from_iteratorgty6u7jkmi9of0jumghk7ufj,km biulnj\n",
+    "from torchtext.vocab import build_vocab_from_iterator\n",
     "from typing import Iterable, List\n",
     "from torch.nn.utils.rnn import pad_sequence\n",
     "from torch.utils.data import DataLoader\n",
@@ -65,7 +65,12 @@
     "\n",
     "import numpy as np\n",
     "from datasets import load_dataset\n",
-    "import random"
+    "import random\n",
+    "\n",
+    "from tokenizers import Tokenizer\n",
+    "from tokenizers.models import BPE\n",
+    "from tokenizers.trainers import BpeTrainer\n",
+    "from tokenizers.pre_tokenizers import Whitespace "
    ]
   },
   {
